kubernetes/listener-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: listener
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: listener
    spec:
      containers:
      - name: listener
        image: quay.io/humancellatlas/secondary-analysis-lira:v0.5.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: listener-config
          mountPath: /etc/secondary-analysis
          readOnly: true
      volumes:
      - name: listener-config
        secret:
          secretName: listener-config-2018-01-22
          items:
          - key: config
            path: config.json
