kubernetes/listener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listener
spec:
  type: NodePort
  selector:
    app: listener
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
