kubernetes/listener-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: listener
spec:
  backend:
    serviceName: listener
    servicePort: 8080
